NO-TICKET Convert config into service
