# docs/swagger.json
@@ -51,7 +51,7 @@
                 }
             }
         },
-        "/credentials/{eid}": {
+        "/credentials/{employee_id}": {
             "delete": {
                 "description": "Delete a credential",
                 "produces": [
@@ -64,7 +64,7 @@
                     {
                         "type": "string",
                         "description": "Employee ID",
-                        "name": "eid",
+                        "name": "employee_id",
                         "in": "path",
                         "required": true
                     }
@@ -82,7 +82,7 @@
                 }
             }
         },
-        "/credentials/{eid}/password": {
+        "/credentials/{employee_id}/password": {
             "delete": {
                 "description": "Reset a credential's password",
                 "produces": [
@@ -95,7 +95,7 @@
                     {
                         "type": "string",
                         "description": "Employee ID",
-                        "name": "eid",
+                        "name": "employee_id",
                         "in": "path",
                         "required": true
                     }
@@ -114,6 +114,9 @@
             },
             "patch": {
                 "description": "Patch a credential's password",
+                "consumes": [
+                    "application/json"
+                ],
                 "produces": [
                     "application/json"
                 ],
@@ -124,12 +127,12 @@
                     {
                         "type": "string",
                         "description": "Employee ID",
-                        "name": "eid",
+                        "name": "employee_id",
                         "in": "path",
                         "required": true
                     },
                     {
-                        "description": "Patch Password Request",
+                        "description": "Password Patch Request",
                         "name": "data",
                         "in": "body",
                         "required": true,
@@ -150,16 +153,117 @@
                     }
                 }
             }
+        },
+        "/profiles/{ehid}": {
+            "get": {
+                "description": "Get a profile",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Profiles"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Employee Hash ID",
+                        "name": "ehid",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success Response",
+                        "schema": {
+                            "$ref": "#/definitions/profile.ResponseDto"
+                        }
+                    },
+                    "500": {
+                        "description": "InternalServerError"
+                    }
+                }
+            },
+            "delete": {
+                "description": "Delete a profile",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Profiles"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Employee Hash ID",
+                        "name": "ehid",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success Response",
+                        "schema": {
+                            "$ref": "#/definitions/profile.DeleteResponseDto"
+                        }
+                    },
+                    "500": {
+                        "description": "InternalServerError"
+                    }
+                }
+            },
+            "patch": {
+                "description": "Patch a profile",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Profiles"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Employee Hash ID",
+                        "name": "ehid",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Profile Patch Request",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/profile.PatchRequestDto"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success Response",
+                        "schema": {
+                            "$ref": "#/definitions/profile.PatchResponseDto"
+                        }
+                    },
+                    "500": {
+                        "description": "InternalServerError"
+                    }
+                }
+            }
         }
     },
     "definitions": {
         "credential.PatchPasswordRequestDto": {
             "type": "object",
             "properties": {
-                "currentPassword": {
+                "current_password": {
                     "type": "string"
                 },
-                "newPassword": {
+                "new_password": {
                     "type": "string"
                 }
             }
@@ -167,7 +271,7 @@
         "credential.PostRequestDto": {
             "type": "object",
             "properties": {
-                "employeeId": {
+                "employee_id": {
                     "type": "string"
                 },
                 "password": {
@@ -178,6 +282,64 @@
         "credential.ResponseDto": {
             "type": "object",
             "properties": {
+                "status": {
+                    "type": "string"
+                }
+            }
+        },
+        "profile.DeleteResponseDto": {
+            "type": "object",
+            "properties": {
+                "status": {
+                    "type": "string"
+                }
+            }
+        },
+        "profile.Entity": {
+            "type": "object",
+            "properties": {
+                "dob": {
+                    "type": "string"
+                },
+                "ehid": {
+                    "type": "string"
+                },
+                "email_address": {
+                    "type": "string"
+                },
+                "employee_id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "profile.PatchRequestDto": {
+            "type": "object",
+            "properties": {
+                "fields": {
+                    "type": "object",
+                    "additionalProperties": {
+                        "type": "string"
+                    }
+                }
+            }
+        },
+        "profile.PatchResponseDto": {
+            "type": "object",
+            "properties": {
+                "status": {
+                    "type": "string"
+                }
+            }
+        },
+        "profile.ResponseDto": {
+            "type": "object",
+            "properties": {
+                "profile": {
+                    "$ref": "#/definitions/profile.Entity"
+                },
                 "status": {
                     "type": "string"
                 }
